--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -6,93 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Şahin Irmak - Fan Sayfası</title>
   <style>
-    /* Tüm CSS aynı kalıyor, istersen sadeleştiririm */
-    /* ... (stilin mevcut haliyle devam edebilir) */
+    body { font-family: Arial, sans-serif; background: #f4f4f4; color: #333; margin: 0; padding: 0; }
+    header, footer { background: #2c3e50; color: white; text-align: center; padding: 20px; }
+    nav { background: #34495e; text-align: center; padding: 10px; }
+    nav a { color: white; margin: 0 10px; text-decoration: none; font-weight: bold; }
+    section { max-width: 800px; margin: auto; background: white; padding: 20px; margin-top: 20px; border-radius: 10px; }
+    img { max-width: 100%; border-radius: 10px; }
+    iframe { width: 100%; height: 315px; margin-top: 10px; border-radius: 10px; }
   </style>
 </head>
 <body>
-  <button class="dark-toggle" onclick="document.body.classList.toggle('dark-mode')">🌙 Karanlık Mod</button>
+
   <header>
-    <h1>Şahin Irmak</h1>
-    <p>Oyuncu | Komedyen | Tiyatrocu</p>
+    <h1>Şahin Irmak Fan Sayfası</h1>
   </header>
-  
+
   <nav>
     <a href="#hakkinda">Hakkında</a>
-    <a href="#filmografi">Filmografi</a>
     <a href="#galeri">Galeri</a>
     <a href="#videolar">Videolar</a>
-    <a href="#iletisim">İletişim</a>
-    <a href="#yorumlar">Yorumlar</a>
   </nav>
 
   <section id="hakkinda">
     <h2>Hakkında</h2>
-    <img src="https://i.imgur.com/m1cNTrP.jpg" alt="Şahin Irmak Fotoğrafı" />
-    <p>Şahin Irmak, 29 Eylül 1981'de İzmir'de doğmuştur. Beşiktaş Kültür Merkezi'nde (BKM) oyunculuk eğitimi almıştır. "Çok Güzel Hareketler Bunlar" programı ile geniş kitlelere ulaşmış, ardından birçok dizi ve sinema filminde rol almıştır. 2018 yılında oyuncu Asena Tuğal ile evlenmiştir.</p>
-  </section>
-
-  <section id="filmografi">
-    <h2>Filmografi</h2>
-    <ul>
-      <li>Karayılan (2007)</li>
-      <li>Çok Güzel Hareketler Bunlar</li>
-      <li>Entelköy Efeköy'e Karşı (2011)</li>
-      <li>Jet Sosyete</li>
-      <li>Sultan</li>
-      <li>Aşağı Yukarı Yemişlililer</li>
-    </ul>
+    <img src="https://i.imgur.com/m1cNTrP.jpg" alt="Şahin Irmak Fotoğrafı">
+    <p>Şahin Irmak, 1981 doğumlu Türk oyuncudur. Çok Güzel Hareketler Bunlar ile tanınmıştır.</p>
   </section>
 
   <section id="galeri">
     <h2>Galeri</h2>
-    <div class="carousel">
-      <img src="https://i.imgur.com/KQzZVq7.jpg" class="active" />
-      <img src="https://i.imgur.com/1RknswV.jpg" />
-      <img src="https://i.imgur.com/sZ7nDkp.jpg" />
-    </div>
+    <img src="https://i.imgur.com/efYq6Zn.jpg" alt="Galeri Fotoğrafı">
   </section>
 
   <section id="videolar">
     <h2>Videolar</h2>
-    <p>Şahin Irmak'tan unutulmaz anlar:</p>
-    <iframe src="https://www.youtube.com/embed/pz6cttc8PtQ" title="ÇGHB Şahin Irmak" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/xyv_iN_bqkg" title="Jet Sosyete'den sahne" allowfullscreen></iframe>
-  </section>
-
-  <section id="yorumlar">
-    <h2>Yorumlar</h2>
-    <form>
-      <input type="text" placeholder="Adınız" required />
-      <textarea placeholder="Yorumunuz" rows="4" required></textarea>
-      <button type="submit">Gönder</button>
-    </form>
-  </section>
-
-  <section id="iletisim">
-    <h2>İletişim</h2>
-    <ul>
-      <li><a href="https://www.instagram.com/sahinirmak/" target="_blank">Instagram</a></li>
-      <li><a href="https://www.imdb.com/name/nm3122390/" target="_blank">IMDb Profili</a></li>
-    </ul>
+    <iframe src="https://www.youtube.com/embed/pz6cttc8PtQ" title="Şahin Irmak Videosu" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/Ey-c5DH2REU" title="Şahin Irmak - Skeç" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <footer>
-    <p>&copy; 2025 Şahin Irmak Fan Sitesi | Bu site resmi değildir.</p>
+    <p>&copy; 2025 Fan Sayfası. Resmî değildir.</p>
   </footer>
 
-  <script>
-    // Galeri otomatik geçiş
-    const images = document.querySelectorAll('.carousel img');
-    let current = 0;
-
-    function showNextImage() {
-      images[current].classList.remove('active');
-      current = (current + 1) % images.length;
-      images[current].classList.add('active');
-    }
-
-    setInterval(showNextImage, 3000);
-  </script>
 </body>
 </html>
