--- a/index.html
+++ b/index.html
@@ -3,33 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Şahin Irmak - Fan Sayfası</title>
+  <title>Şahin Irmak Fan Sayfası</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; color: #333; margin: 0; padding: 0; }
-    header, footer { background: #2c3e50; color: white; text-align: center; padding: 20px; }
-    nav { background: #34495e; text-align: center; padding: 10px; }
+    body { font-family: Arial, sans-serif; background: #f0f0f0; margin: 0; padding: 0; }
+    header, footer { background: #333; color: #fff; padding: 20px; text-align: center; }
+    nav { background: #444; padding: 10px; text-align: center; }
     nav a { color: white; margin: 0 10px; text-decoration: none; font-weight: bold; }
-    section { max-width: 800px; margin: auto; background: white; padding: 20px; margin-top: 20px; border-radius: 10px; }
+    section { max-width: 800px; margin: auto; padding: 20px; background: #fff; margin-top: 20px; border-radius: 8px; }
     img { max-width: 100%; border-radius: 10px; }
-    iframe { width: 100%; height: 315px; margin-top: 10px; border-radius: 10px; }
+    iframe { width: 100%; height: 315px; border: none; margin-top: 15px; border-radius: 10px; }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Şahin Irmak Fan Sayfası</h1>
+    <h1>Şahin Irmak</h1>
+    <p>Hayran Sayfası</p>
   </header>
 
   <nav>
     <a href="#hakkinda">Hakkında</a>
-    <a href="#galeri">Galeri</a>
     <a href="#videolar">Videolar</a>
+    <a href="#galeri">Galeri</a>
   </nav>
 
   <section id="hakkinda">
     <h2>Hakkında</h2>
-    <img src="https://i.imgur.com/m1cNTrP.jpg" alt="Şahin Irmak Fotoğrafı">
-    <p>Şahin Irmak, 1981 doğumlu Türk oyuncudur. Çok Güzel Hareketler Bunlar ile tanınmıştır.</p>
+    <img src="https://i.imgur.com/m1cNTrP.jpg" alt="Şahin Irmak">
+    <p>Şahin Irmak, Türk oyuncu ve komedyendir. Çok Güzel Hareketler Bunlar ile tanınmıştır.</p>
+  </section>
+
+  <section id="videolar">
+    <h2>Videolar</h2>
+    <iframe src="https://www.youtube.com/embed/pz6cttc8PtQ" title="YouTube video oynatıcı" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/Ey-c5DH2REU" title="YouTube video oynatıcı" allowfullscreen></iframe>
   </section>
 
   <section id="galeri">
@@ -37,14 +44,8 @@
     <img src="https://i.imgur.com/efYq6Zn.jpg" alt="Galeri Fotoğrafı">
   </section>
 
-  <section id="videolar">
-    <h2>Videolar</h2>
-    <iframe src="https://www.youtube.com/embed/pz6cttc8PtQ" title="Şahin Irmak Videosu" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/Ey-c5DH2REU" title="Şahin Irmak - Skeç" frameborder="0" allowfullscreen></iframe>
-  </section>
-
   <footer>
-    <p>&copy; 2025 Fan Sayfası. Resmî değildir.</p>
+    <p>&copy; 2025 Fan Sayfası - Resmî değildir</p>
   </footer>
 
 </body>
